# klusai-internship-2026-teamJonathan

./: .gitignore  README.md
Jonathan Necea/: pyproject.toml
Jonathan Necea/02 Building with the Claude API/01 Accessing Claude with the API/: 001_requests.ipynb  001_requests_ex.ipynb  002_system_prompt.ipynb  002_system_prompt_ex.ipynb  003_temperature.ipynb  004_streaming.ipynb  005_controlling_output.ipynb  005_controlling_output_ex.ipynb  helpers.py
Jonathan Necea/02 Building with the Claude API/02 Prompt evaluation/: 001_prompt_evals.ipynb  dataset.json  helpers.py
Jonathan Necea/02 Building with the Claude API/03 Prompt engineering techniques/: 001_prompting.ipynb  002_prompting_completed.ipynb  003_ex.ipynb  dataset.json  output.html  output.json
Jonathan Necea/02 Building with the Claude API/04 Tool use with Claude/: 001_tools.ipynb  002_tools.ipynb  003_tool_streaming.ipynb  005_text_editor_tool.ipynb  006_web_search.ipynb  main.py  test.py
Jonathan Necea/02 Building with the Claude API/05 RAG and Agentic Search/: 001_chunking.ipynb  002_embeddings.ipynb  003_vectordb.ipynb  004_bm25.ipynb  005_hybrid.ipynb
Jonathan Necea/02 Building with the Claude API/06 Features of Claude/: 001_thinking.ipynb  002_images.ipynb  003_caching.ipynb  005_code_execution.ipynb
Jonathan Necea/02 Building with the Claude API/07 MCP/cli_project/: mcp_client.py  mcp_server.py
Jonathan Necea/02 Building with the Claude API/08 Anthropic apps/app_starter/: CLAUDE.md
Jonathan Necea/labs/claude-agent-labs/: Claude-Agent-Labs-Worksheet.md
labs/claude-agent-labs/: README.md  (+1 more)
(+305 files in other folders)
